fix: make List return modifiable